# SupaSaaS

./: .gitignore  pyproject.toml  readme.md  requirements.txt  supasaas.py  test_supasaas.py
docs/html/: _logging.html  _validators.html  configuration.html  features.html  genindex.html  index.html  initialization.html  installation.html  logging.html  loguru_config.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  supabase_auth.html  supabase_client.html  supabase_db.html  supabase_logger.html  supabase_storage.html  usage.html
docs/html/_modules/: index.html
docs/html/_modules/supasaas/: _logging.html  _validators.html  supabase_auth.html  supabase_client.html  supabase_db.html  supabase_storage.html
docs/html/_modules/supasaas/_logging/: loguru_config.html  supabase_logger.html
docs/html/_sources/: _logging.rst.txt  _validators.rst.txt  configuration.rst.txt  features.rst.txt  index.rst.txt  loguru_config.rst.txt  modules.rst.txt  supabase_client.rst.txt  supabase_db.rst.txt  supabase_logger.rst.txt  supabase_storage.rst.txt
docs/html/_static/: bizstyle.js
docs/source/: conf.py  initialization.rst  installation.rst  logging.rst  supabase_auth.rst  usage.rst
src/: logging_config.py  supasaas.py
src/supasaas/: __init__.py  _logging.py  logging_config.py  supabase_auth.py  supabase_client.py  supabase_db.py  supabase_storage.py  supasaas.py
src/supasaas/_logging/: __init__.py  _logging.rst  loguru_config.py  supabase_logger.py
tests/: test_supabase_auth.py  test_supabase_db.py  test_supabase_storage.py  test_supasaas.py
